new proj/src/objects/Account_Request_Note__c.object
<CustomObject>
    <fields>
        <fullName>Account_Creator__c</fullName>
        <label>Account Creator</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Request Notes</relationshipLabel>
        <relationshipName>Account_Request_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>User</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CMF Admin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Request Note</label>
    <nameField>
        <displayFormat>SFDC-{00000}</displayFormat>
        <label>Account Request Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Request Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>